# SGDqwen

./: .gitignore  Cargo.toml  DOCUMENTACION.md  Makefile  combined.txt  doc.md  plan_modificaciones.md  prompt
sgd_data/: documents.db  settings.json
src/: app.rs  db.rs  main.rs  models.rs  storage.rs
